--- a/MusicStore/Pages/Library.xaml
+++ b/MusicStore/Pages/Library.xaml
@@ -29,7 +29,7 @@
                 <ColumnDefinition Width="8*"/>
             </Grid.ColumnDefinitions>
             <StackPanel VerticalAlignment="Center" Grid.Row="0" Grid.Column="0">
-                <TextBlock Text="Current Mode" 
+                <TextBlock Text="{DynamicResource currentmode}" 
                        FontWeight="Bold" 
                        Background="Transparent"
                        Foreground="{DynamicResource napisy}"
@@ -56,7 +56,7 @@
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
 
-            <Button Content="Add new Track" 
+            <Button Content="{DynamicResource addnewtrack}" 
                     Click="AddNewTrack_Click"
                     FontSize="14"
                     Foreground="White"
@@ -78,7 +78,7 @@
                     </ControlTemplate>
                 </Button.Template>
             </Button>
-            <Button Content="Add new Album"
+            <Button Content="{DynamicResource addnewalbum}"
                     Grid.Row="0"
                     Grid.Column="1"
                     FontSize="14"
@@ -99,7 +99,7 @@
                     </ControlTemplate>
                 </Button.Template>
             </Button>
-            <Button Content="Add new Artist"
+            <Button Content="{DynamicResource addnewartist}"
                     Grid.Row="0"
                     Grid.Column="2"
                     FontSize="14"
@@ -120,7 +120,7 @@
                     </ControlTemplate>
                 </Button.Template>
             </Button>
-            <Button Content="Browse Mode" 
+            <Button Content="{DynamicResource browsemod}" 
                     Click="SetBrowseMode_Click"
                     Grid.Row="1"
                     Grid.Column="0"
@@ -142,7 +142,7 @@
                     </ControlTemplate>
                 </Button.Template>
             </Button>
-            <Button Content="Edit Mode" 
+            <Button Content="{DynamicResource editmode}" 
                     Click="SetEditMode_Click"
                     Grid.Row="1"
                     Grid.Column="1"
@@ -164,7 +164,7 @@
                     </ControlTemplate>
                 </Button.Template>
             </Button>
-            <Button Content="Deletion Mode" 
+            <Button Content="{DynamicResource deletionmode}" 
                     Click="SetDeleteMode_Click"
                     Grid.Row="1"
                     Grid.Column="2"
@@ -195,7 +195,7 @@
                 <RowDefinition/>
             </Grid.RowDefinitions>
             <StackPanel Orientation="Horizontal" Grid.Row="0" VerticalAlignment="Center">
-                <TextBlock Text="Selected items: " 
+                <TextBlock Text="{DynamicResource selecteditems}" 
                            FontWeight="Bold" 
                            Background="Transparent" 
                            Foreground="{DynamicResource napisy}"
@@ -210,7 +210,7 @@
                            HorizontalAlignment="Center"/>
             </StackPanel>
             <Grid Grid.Row="1">
-                <Button Content="DELETE" 
+                <Button Content="{DynamicResource DELETE}" 
                         FontWeight="Bold" 
                         Click="DeleteMessageBox_Click"
                         Foreground="White"
@@ -318,7 +318,7 @@
                         </Grid.ColumnDefinitions>
                         <TextBlock Grid.Column="0" 
                                    HorizontalAlignment="Right" 
-                                   Text="Price: "
+                                   Text="{DynamicResource price}"
                                    Foreground="{DynamicResource napisy}"
                                    FontSize="12"
                                    FontFamily="InriaSans-Light"/>
@@ -332,7 +332,7 @@
                     </Grid>
                     <Separator Height="15" Background="{x:Null}" Foreground="{x:Null}"/>
                     <Button HorizontalAlignment="Center"
-                            Content="Add to Cart"
+                            Content="{DynamicResource addtocart}"
                             Foreground="White"
                             Style="{DynamicResource button2}"
                             Width="90"
@@ -419,7 +419,7 @@
                         </Grid.ColumnDefinitions>
                         <TextBlock Grid.Column="0" 
                                    HorizontalAlignment="Right" 
-                                   Text="Tracks: "
+                                   Text="{DynamicResource tracks}"
                                    Foreground="{DynamicResource napisy}"
                                    FontSize="12"
                                    FontFamily="InriaSans-Light"/>
@@ -450,7 +450,7 @@
                         </Grid.ColumnDefinitions>
                         <TextBlock Grid.Column="0" 
                                    HorizontalAlignment="Right" 
-                                   Text="Price: "
+                                   Text="{DynamicResource price}"
                                    Foreground="{DynamicResource napisy}"
                                    FontSize="12"
                                    FontFamily="InriaSans-Light"/>
@@ -464,7 +464,7 @@
                     </Grid>
                     <Separator Height="15" Background="{x:Null}" Foreground="{x:Null}"/>
                     <Button HorizontalAlignment="Center"
-                            Content="Add to Cart"
+                            Content="{DynamicResource addtocart}"
                             Foreground="White"
                             Style="{DynamicResource button2}"
                             Width="90"
@@ -489,7 +489,7 @@
                         Style="{DynamicResource button2}"
                         Width="90"
                         Height="40"
-                        Content="Open Album"
+                        Content="{DynamicResource openalbum}"
                         BorderThickness="0"
                         >
                     <Button.Template>
