Artist Manager and Album Manager Base
//Artist Manager
Fully working base window for Artist Manager
- Requires DataBase interaction

//Album Manager
Prepared base window for Album Manager
- Missing Track Selection

//Track Manager
Replaced not-optimal price text box input protection, replaced it with Regex rule (that requires fine-tuning)

--- a/MusicStore/Pages/Library.xaml
+++ b/MusicStore/Pages/Library.xaml
@@ -108,7 +108,8 @@
                     FontFamily="InriaSans-Light"
                     Cursor="Hand"
                     Style="{DynamicResource button1}"
-                    BorderThickness="0">
+                    BorderThickness="0"
+                    Click="AddNewArtist_Click">
                 <Button.Template>
                     <ControlTemplate TargetType="Button">
                         <Border
