--- a/MusicStore/Pages/Library.xaml
+++ b/MusicStore/Pages/Library.xaml
@@ -87,7 +87,8 @@
                     FontFamily="InriaSans-Light"
                     Cursor="Hand"
                     Style="{DynamicResource button1}"
-                    BorderThickness="0">
+                    BorderThickness="0"
+                    Click="AddNewAlbum_Click">
                 <Button.Template>
                     <ControlTemplate TargetType="Button">
                         <Border
