--- a/MusicStore/MainMenu.xaml
+++ b/MusicStore/MainMenu.xaml
@@ -232,8 +232,8 @@
                                Cursor="Hand"
                                Click="Btnopcje_Click"
                                Margin="0,0,0,0"
-                               Style="{DynamicResource button1}"   
-                               Grid.Row="2">
+                               Style="{DynamicResource button2}"   
+                               Grid.Row="3">
                             <Button.Template>
                                 <ControlTemplate TargetType="Button">
                                     <Border
@@ -254,8 +254,30 @@
                                Cursor="Hand"
                                Click="Btnuser_Click"
                                Margin="0,0,0,0"
-                               Style="{DynamicResource button2}"   
-                               Grid.Row="3">
+                               Style="{DynamicResource button1}"   
+                               Grid.Row="4">
+                            <Button.Template>
+                                <ControlTemplate TargetType="Button">
+                                    <Border
+                                        CornerRadius="0,5,5,0"
+                                        Background="{TemplateBinding Background}">
+                                        <ContentPresenter VerticalAlignment="Center"
+                                                  HorizontalAlignment="Center"/>
+                                    </Border>
+                                </ControlTemplate>
+                            </Button.Template>
+                        </Button>
+                        <Button    x:Name="btnauthors"
+                               Content="Author List"
+                               FontSize="16"
+                               BorderThickness="5,5,5,5"
+                               Foreground="White"
+                               FontFamily="InriaSans-Light"
+                               Cursor="Hand"
+                               Click="Btnauthor_Click"
+                               Margin="0,0,0,0"
+                               Style="{DynamicResource button1}"   
+                               Grid.Row="2">
                             <Button.Template>
                                 <ControlTemplate TargetType="Button">
                                     <Border
